--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3064,7 +3064,7 @@ header.major > :last-child {
 
 header.major > p {
   margin-top: 0;
-  text-align: center;
+  text-align: left;
 }
 
 header.major > .date {
